--- a/Fulbank/Fulbank/Fulbank.csproj
+++ b/Fulbank/Fulbank/Fulbank.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="View\Register.cs">
+    <Compile Update="View\User\Login.cs">
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
