--- a/Fulbank/Fulbank/Fulbank.csproj
+++ b/Fulbank/Fulbank/Fulbank.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="View\User\Login.cs">
       <SubType>Form</SubType>
     </Compile>
