--- a/Fulbank/Fulbank/Fulbank.csproj
+++ b/Fulbank/Fulbank/Fulbank.csproj
@@ -9,14 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspose.Words" Version="24.11.1" />
-    <PackageReference Include="MySqlConnector" Version="2.3.7" />
+    <PackageReference Include="Aspose.Words" Version="24.12.0" />
+    <PackageReference Include="ini-parser" Version="2.5.2" />
+    <PackageReference Include="MySqlConnector" Version="2.4.0" />
+    <PackageReference Include="QuestPDF" Version="2024.12.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Update="View\User\Login.cs">
       <SubType>Form</SubType>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Params\" />
   </ItemGroup>
 
 </Project>
